--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "Ella McMorrow"
 title_separator          : "-"
 name                     : "Your Name"
-description              : "This is a portfolio of work for a Final Year Creative Coding Website"
+description              : "This is a portfolio of work for a Final Year Creative Coding Website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -85,9 +85,9 @@ analytics:
 # Site Author
 author:
   name             : "Your Name"
-  avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Science Portfolio"
-  location         : "Your Location"
+  avatar           : "/images/ellamcmorrow.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Creatie Coding"
+  location         : "Dublin"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Your Github"
+  github           : "Github.com/ellamcmorrow"
   gitlab           :
   google_plus      :
   keybase          :
