--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -15,7 +15,7 @@ name                     : "Ella McMorrow"
 description              : "This is a portfolio of work for a Final Year Creative Coding Website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "ellamcmorrow/creative-coding"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Ella McMorrow"
-  avatar           : "/images/me-img.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/me-img.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Creatie Coding"
   location         : "Dublin, Ireland"
   email            : ekmcmorrow@gmail.com
@@ -244,7 +244,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "/about"
       type: posts
     values:
       layout: single
