--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ analytics:
 author:
   name             : "Ella McMorrow"
   avatar           : "/images/me-img.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Creatie Coding"
+  bio              : "Creative Coding"
   location         : "Dublin, Ireland"
-  email            : ekmcmorrow@gmail.com
+  email            : "ekmcmorrow@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
